# SOAP_JAX

./: .gitignore  LICENSE  README.md  pyproject.toml
src/soap_jax/: __init__.py  soap.py
